--- a/Portfolio2/index.html
+++ b/Portfolio2/index.html
@@ -15,7 +15,7 @@
 
     <!-- Additional CSS Files -->
     <link rel="stylesheet" href="assets/css/fontawesome.css">
-    <link rel="stylesheet" href="assets/css/templatemo-572-designer.css">
+    <link rel="stylesheet" href="assets/css/MainCSS.css">
     <link rel="stylesheet" href="assets/css/owl.css">
     <link rel="stylesheet" href="assets/css/animate.css">
     <link rel="stylesheet"href="https://unpkg.com/swiper@7/swiper-bundle.min.css"/>
@@ -98,22 +98,13 @@
                       <h2>Over<br><em>Wouter Backx</em>.</h2>
                   </div>
                   <div class="left-content">
-                      <p>Lorem Ipsum dolor sit amet, consectetur adipsicing kengan omeg kohm tokito adipcingi elit, sed do eismuod larehai med at vero eos et suscipit neque rerum molestias accusamus et iusto odio dignissimos ducimus qui blanditis.</p>
-                      <div class="primary-button">
-                          <a href="#">Discover More</a>
-                      </div>
+                      <p>Welkom op mijn portfolio site. Hier is alles te vinden over mij. Van mijn CV tot aan mijn projecten die ik op school en buiten school heb afgerond.</p>
                   </div>
               </div>
               <div class="col-lg-4">
                   <div class="right-image">
                       <div class="thumb">
-                          <div class="hover-effect">
-                              <div class="inner-content">
-                                  <h4><a href="#">Modernized Interior</a></h4>
-                                  <span>Guest Room Decoration</span>
-                              </div>
-                          </div>
-                          <img src="assets/images/whats-trending-item-image.jpg" alt="">
+                          <img src="assets/images/Wouter.jpg" alt="">
                       </div>
                   </div>
               </div>
@@ -122,38 +113,7 @@
   </section>
 
 
-  <section class="contact-us" id="contact">
-      <div class="container">
-          <div class="row">
-              <div class="col-lg-6 left-form">
-                  <form id="contact" action="" method="post">
-                      <div class="row">
-                          <div class="col-lg-12">
-                              <div class="section-heading">
-                                  <h2>Don't be Hesitated<br><em>Talk to us</em> now!</h2>
-                              </div>
-                          </div>
-                          <div class="col-lg-6">                 
-                              <input name="name" type="text" id="name" placeholder="First Name*" required="">               
-                          </div>
-                          <div class="col-lg-6">                
-                              <input name="last-name" type="text" id="last-name" placeholder="Last Name*" required="">                           
-                          </div>
-                          <div class="col-lg-6">                       
-                              <input name="email" type="text" id="email" pattern="[^ @]*@[^ @]*" placeholder="Your Email" required="">                        
-                          </div>
-                          <div class="col-lg-6">                         
-                              <input name="subject" type="text" id="subject" placeholder="Subject*" required="">                        
-                          </div>
-                          <div class="col-lg-12">                           
-                              <textarea name="message" type="text" class="form-control" id="message" placeholder="Message" required=""></textarea>                          
-                          </div>
-                          <div class="col-lg-12">
-                              <button type="submit" id="form-submit" class="main-button ">Send Message</button>                            
-                          </div>
-                      </div>
-                  </form>
-              </div>
+
              
 
 
