--- a/Portfolio2/trending.html
+++ b/Portfolio2/trending.html
@@ -8,7 +8,7 @@
 
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
 
-    <title>Designer Template - Trending Page</title>
+    <title>Portfolio | Wouter Backx</title>
 
     <!-- Bootstrap core CSS -->
     <link href="Scripts/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -16,7 +16,7 @@
 
     <!-- Additional CSS Files -->
     <link rel="stylesheet" href="assets/css/fontawesome.css">
-    <link rel="stylesheet" href="assets/css/templatemo-572-designer.css">
+    <link rel="stylesheet" href="assets/css/MainCSS.css">
     <link rel="stylesheet" href="assets/css/owl.css">
     <link rel="stylesheet" href="assets/css/animate.css">
     <link rel="stylesheet"href="https://unpkg.com/swiper@7/swiper-bundle.min.css"/>
