--- a/Portfolio2/about.html
+++ b/Portfolio2/about.html
@@ -121,7 +121,7 @@
                     <div id="workexperience" class="sectionClass">
                         <div class="row ">
                           <div class="sectiontitle">
-                            <h2>Work experience</h2>
+                            <h2>Werk ervaring</h2>
                             <span class="headerLine"></span>
                           </div>
                           <div class="fullWidth eight columns">
@@ -131,12 +131,12 @@
                                   <i class="faPra fa-briefcase"></i>
                                 </div>
                                 <div class="cbp_tmlabel wow fadeInRight animated">
-                                  <h3>Web developer</h3>
+                                  <h3>Kok -Horsecenter pirouette</h3>
                                   <div class="date">
-                                    <i class="fa fa-calendar"></i>April 2014 - Current
+                                    <i class="fa fa-calendar"></i>Jan 2023 - Heden
                                   </div>
-                                  <h4><i class="fa fa-flag"></i>Davic Company, Bratislava</h4>
-                                  <p class="projectParagraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit obcaecati ipsa quae, iusto laudantium qui, nisi eum modi perspiciatis quasi facilis corporis iure soluta enim incidunt itaque aspernatur sequi tempora.</p>
+                                  <h4><i class="fa fa-flag"></i>Rotterdam</h4>
+                                  <p class="projectParagraph">Terug gekomen bij horsecenter pirouette kon ik gelijk aan de slag als kok. Ik sta nu als kok op mijn eigen sectie en werk hier ook meerdere mensen in. </p>
                                 </div>
                               </li>
                               <li>
@@ -144,10 +144,10 @@
                                   <i class="faPra fa-briefcase"></i>
                                 </div>
                                 <div class="cbp_tmlabel wow fadeInRight animated">
-                                  <h3>Web designer</h3>
-                                  <h4><i class="fa fa-flag"></i>Fannous Company, Prague</h4>
-                                  <div class="date"><i class="fa fa-calendar"></i>June 2012 - April 2014</div>
-                                  <p class="projectParagraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt quasi perspiciatis, aliquid sed maiores accusamus. Adipisci quidem nostrum quos quae doloremque esse a, ipsum earum, recusandae omnis dignissimos et sint.</p>
+                                  <h3>Keukenhulp -Square '47 Rotterdam</h3>
+                                  <h4><i class="fa fa-flag"></i>Rotterdam</h4>
+                                  <div class="date"><i class="fa fa-calendar"></i>Dec 2022 - Jan 2023</div>
+                                  <p class="projectParagraph">Keuken hulp bij Square '47</p>
                                 </div>
                               </li>
                               <li>
@@ -155,11 +155,10 @@
                                   <i class="faPra fa-briefcase"></i>
                                 </div>
                                 <div class="cbp_tmlabel wow fadeInRight animated">
-                                  <h3>Web designer</h3>
-                                  <h4><i class="fa fa-flag"></i>Techixs Company, London</h4>
-                                  <div class="date"><i class="fa fa-calendar"></i>November 2009 - June 2012</div>
-                                  <p class="projectParagraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla labore atque alias ipsa, nam quod rerum repellat cumque, aliquam sequi vitae voluptatibus cum soluta incidunt tempore accusamus eius sed excepturi!Lorem ipsum dolor sit amet,
-                                    consectetur adipisicing elit. Tempora natus veritatis aperiam repellendus dolor vel, expedita assumenda eos, mollitia quae ullam esse voluptas vero. Dolores culpa eaque vitae eum quibusdam?</p>
+                                  <h3>Keukenhulp -Horsecenter pirouette</h3>
+                                  <h4><i class="fa fa-flag"></i>Rotterdam</h4>
+                                  <div class="date"><i class="fa fa-calendar"></i>Feb 2022 - Nov 2022</div>
+                                  <p class="projectParagraph">Begonnen in de afwas. Al erg snel daarna omhoog gegaan naar keukenhulp.</p>
                       
                                 </div>
                               </li>
@@ -168,9 +167,9 @@
                                   <i class="faPra fa-briefcase"></i>
                                 </div>
                                 <div class="cbp_tmlabel wow fadeInRight animated">
-                                  <h3>Freelancer</h3>
-                                  <div class="date"><i class="fa fa-calendar"></i>Januar 2006 - November 2009</div>
-                                  <p class="projectParagraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse iusto, possimus hic at quisquam, incidunt illo asperiores et nobis, qui nulla consequatur molestiae quibusdam expedita dignissimos? Iste eum velit quos.</p>
+                                  <h3>Allroundmedewerker -Coop </h3>
+                                  <div class="date"><i class="fa fa-calendar"></i>Nov 2020 - Dec 2021</div>
+                                  <p class="projectParagraph">Begonnen als Vakkenvuller door gegroeid naar kassamedewerker en later zelfs geholpen met meerdere teamleiders.</p>
                                 </div>
                               </li>
                             </ul>
