--- a/Portfolio2/about.html
+++ b/Portfolio2/about.html
@@ -63,7 +63,7 @@
                 <a class="nav-link active" href="about.html">CV</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="explore.html">Projecten</a>
+                <a class="nav-link" href="projecten.html">Projecten</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="contact.html">Contact Us</a>
