--- a/Portfolio2/contact.html
+++ b/Portfolio2/contact.html
@@ -108,7 +108,7 @@
                 <div class="contact-page-form">
                     <div class="row">
                         <div class="col-lg-6 align-self-center">
-                            <form id="contact" action="" method="post">
+                            <form id="contact" action="./form.php" method="post">
                                 <div class="row">
                                     <div class="col-lg-12">
                                         <div class="section-heading">
