--- a/Portfolio2/contact.html
+++ b/Portfolio2/contact.html
@@ -116,10 +116,10 @@
                                         </div>
                                     </div>
                                     <div class="col-lg-6">                 
-                                        <input name="first-name" type="text" id="first-name" placeholder="First Name*" required="">               
+                                        <input name="first_name" type="text" id="first_name" placeholder="First Name*" required="">               
                                     </div>
                                     <div class="col-lg-6">                
-                                        <input name="last-name" type="text" id="last-name" placeholder="Last Name*" required="">                           
+                                        <input name="last_name" type="text" id="last_name" placeholder="Last Name*" required="">                           
                                     </div>
                                     <div class="col-lg-6">                       
                                         <input name="email" type="text" id="email" pattern="[^ @]*@[^ @]*" placeholder="Your Email" required="">                        
