--- a/Portfolio2/contact.html
+++ b/Portfolio2/contact.html
@@ -174,8 +174,8 @@
 
   <!-- Scripts -->
   <!-- Bootstrap core JavaScript -->
-  <script src="vendor/jquery/jquery.min.js"></script>
-  <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
+  <script src="Scripts/jquery/jquery.min.js"></script>
+  <script src="Scripts/bootstrap/js/bootstrap.min.js"></script>
 
   <script src="assets/js/isotope.min.js"></script>
   <script src="assets/js/owl-carousel.js"></script>
