--- a/Portfolio2/contact.html
+++ b/Portfolio2/contact.html
@@ -116,19 +116,19 @@
                                         </div>
                                     </div>
                                     <div class="col-lg-6">                 
-                                        <input name="first_name" type="text" id="first_name" placeholder="First Name*" required="">               
+                                        <input name="first_name" type="text" id="first_name" placeholder="Voornaam*" required="">               
                                     </div>
                                     <div class="col-lg-6">                
-                                        <input name="last_name" type="text" id="last_name" placeholder="Last Name*" required="">                           
+                                        <input name="last_name" type="text" id="last_name" placeholder="Achternaam*" required="">                           
                                     </div>
                                     <div class="col-lg-6">                       
-                                        <input name="email" type="text" id="email" pattern="[^ @]*@[^ @]*" placeholder="Your Email" required="">                        
+                                        <input name="email" type="text" id="email" pattern="[^ @]*@[^ @]*" placeholder="Email" required="">                        
                                     </div>
                                     <div class="col-lg-6">                         
-                                        <input name="subject" type="text" id="subject" placeholder="Subject*" required="">                        
+                                        <input name="subject" type="text" id="subject" placeholder="onderwerp*" required="">                        
                                     </div>
                                     <div class="col-lg-12">                           
-                                        <textarea name="message" type="text" class="form-control" id="message" placeholder="Message" required=""></textarea>                          
+                                        <textarea name="message" type="text" class="form-control" id="message" placeholder="Bericht" required=""></textarea>                          
                                     </div>
                                     <div class="col-lg-12">
                                         <button type="submit" id="form-submit" class="main-button ">Send Message</button>                            
