--- a/Portfolio2/projecten.html
+++ b/Portfolio2/projecten.html
@@ -96,7 +96,7 @@
                         <h2>Project 1 | Show Your Zoo</h2>
                     </div>
                     <div class="main-image">                   
-                        <img src="assets/images/explore-item-01.jpg" alt="master bedroom design">
+                        <img src="assets/images/SNYKR.png" alt="">
                     </div>
                     <div class="project-info">
                         <div class="row">
