--- a/Portfolio2/projecten.html
+++ b/Portfolio2/projecten.html
@@ -93,7 +93,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="section-heading">
-                        <h2>Project 1 | Show Your Zoo</h2>
+                        <h2>SNYKR</h2>
                     </div>
                     <div class="main-image">                   
                         <img src="assets/images/SNYKR.png" alt="">
@@ -127,19 +127,67 @@
                             <div class="col-lg-2">
                                 <div class="info-item">
                                     <h6>Strategie:</h6>
-                                    <span>Leer &amp; Bootstrap5</span>
+                                    <span>Leer &amp; Bootstrap5 en DB</span>
                                 </div>
                             </div>
                             <div class="col-lg-2">
                                 <div class="info-item">
                                     <h6>Datum:</h6>
-                                    <span>NOV 2022</span>
+                                    <span>2023</span>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
 
+
+                <div class="section-heading">
+                  <h2>Villa4u</h2>
+              </div>
+              <div class="main-image">                   
+                  <img src="assets/images/SNYKR.png" alt="">
+              </div>
+              <div class="project-info">
+                  <div class="row">
+                      <div class="col-lg-2">
+                          <div class="info-item">
+                              <h6>Leden:</h6>
+                              <span>Gijs Weijer, Kas de Bruijn, Wouter Backx</span>
+                          </div>
+                      </div>
+                      <div class="col-lg-2">
+                          <div class="info-item">
+                              <h6>Klant:</h6>
+                              <span>School</span>
+                          </div>
+                      </div>
+                      <div class="col-lg-2">
+                          <div class="info-item">
+                              <h6>Tijd:</h6>
+                              <span>1 maand</span>
+                          </div>
+                      </div>
+                      <div class="col-lg-2">
+                          <div class="info-item">
+                              <h6>Project Soort:</h6>
+                              <span>Website vanaf Projectplan tot gehele site</span>
+                          </div>
+                      </div>
+                      <div class="col-lg-2">
+                          <div class="info-item">
+                              <h6>Strategie:</h6>
+                              <span>creer &amp; bied systeem</span>
+                          </div>
+                      </div>
+                      <div class="col-lg-2">
+                          <div class="info-item">
+                              <h6>Datum:</h6>
+                              <span>2023</span>
+                          </div>
+                      </div>
+                  </div>
+              </div>
+          </div>
 
                 
             </div>
