--- a/Portfolio2/projecten.html
+++ b/Portfolio2/projecten.html
@@ -145,7 +145,7 @@
                   <h2>Villa4u</h2>
               </div>
               <div class="main-image">                   
-                  <img src="assets/images/SNYKR.png" alt="">
+                  <img src="assets/images/villa4u.png" alt="">
               </div>
               <div class="project-info">
                   <div class="row">
