--- a/Portfolio2/projecten.html
+++ b/Portfolio2/projecten.html
@@ -176,7 +176,7 @@
                       <div class="col-lg-2">
                           <div class="info-item">
                               <h6>Strategie:</h6>
-                              <span>creer &amp; bied systeem</span>
+                              <span>3d kaart &amp; bied systeem</span>
                           </div>
                       </div>
                       <div class="col-lg-2">
@@ -188,6 +188,52 @@
                   </div>
               </div>
           </div>
+
+
+          <div class="section-heading">
+            <h2>DutchGP</h2>
+        </div>
+        <div class="main-image">                   
+            <img src="assets/images/DutchGP.png" alt="">
+        </div>
+        <div class="project-info">
+            <div class="row">
+                <div class="col-lg-2">
+                    <div class="info-item">
+                        <h6>Leden:</h6>
+                        <span>Wouter Backx</span>
+                    </div>
+                </div>
+                <div class="col-lg-2">
+                    <div class="info-item">
+                        <h6>Klant:</h6>
+                        <span>School</span>
+                    </div>
+                </div>
+                <div class="col-lg-2">
+                    <div class="info-item">
+                        <h6>Tijd:</h6>
+                        <span>3 weken</span>
+                    </div>
+                </div>
+                <div class="col-lg-2">
+                    <div class="info-item">
+                        <h6>Project Soort:</h6>
+                        <span>Website vanaf Projectplan tot gehele site</span>
+                    </div>
+                </div>
+                <div class="col-lg-2">
+                    
+                </div>
+                <div class="col-lg-2">
+                    <div class="info-item">
+                        <h6>Datum:</h6>
+                        <span>2023</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
                 
             </div>
